fix: addressing review comment for using testressources